# vocalm

./: .gitignore  Cargo.toml  README.md  install.ps1  update.ps1
.github/workflows/: build.yml
drivers/: NOTICE  build_drivers.sh
scripts/: build_installer.sh  package_mac.sh
src/: config.rs  engine.rs  main.rs  meetings.rs  pipeline.rs  recorder.rs  transcribe.rs  ui.rs
